Refactor: project structure and documentation for JMLE-LLM-Toolkit

--- a/colab_notebooks/JMLE-Gemini-2.5-Pro-CoT-Dataset-Correction.ipynb
+++ b/colab_notebooks/JMLE-Gemini-2.5-Pro-CoT-Dataset-Correction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/docto-rin/Med-LLM-Jp/blob/main/colab_notebooks/JMLE-Gemini-2.5-Pro-CoT-Dataset-Correction.ipynb)"
+    "[![Open CoT Correction In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/docto-rin/JMLE-LLM-Toolkit/blob/main/colab_notebooks/JMLE-Gemini-2.5-Pro-CoT-Dataset-Correction.ipynb)"
    ]
   },
   {
