--- a/colab_notebooks/JMLE-SFT.ipynb
+++ b/colab_notebooks/JMLE-SFT.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/docto-rin/Med-LLM-Jp/blob/main/colab_notebooks/JMLE-SFT.ipynb)"
+    "[![Open SFT Example In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/docto-rin/JMLE-LLM-Toolkit/blob/main/colab_notebooks/JMLE-SFT.ipynb)"
    ]
   },
   {
